--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///my_vblog?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/my_vblog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 
+log4j.rootLogger=DEBUG,stdout
+log4j.logger.org.mybatis=DEBUG
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n 
+
 # MyBatis 映射文件通配
 mybatis.config-location=classpath:/mybatis-config.xml
+# MyBatis 映射文件通配
+mybatis.mapper-locations=classpath:/mappers/*.xml
+# MyBatis扫描别名包，和注解@Alias联用
+mybatis.type-aliases-package=com.my.vblog.bean
